# rook

./: .gitattributes  .gitignore  .rookhints  AGENTS.md  BUILDING_DOCKER.md  CONTRIBUTING.md  CONTRIBUTING_RECIPES.md  Cargo.toml  DECOUPLING_STATUS.md  DEGOOSE_AGENTS.md  Dockerfile  GOVERNANCE.md  HANDOFF.md  Justfile  MAINTAINERS.md  README.md  RELEASE.md  RELEASE_CHECKLIST.md  ROOK_FEATURE_BLEND_LEDGER.md  SECURITY.md  deny.toml  download_cli.ps1  download_cli.sh  flake.nix  rook-self-test.yaml  run_cross_local.md  test_acp_client.py
.github/: CODEOWNERS  copilot-instructions.md
.github/DISCUSSION_TEMPLATE/: qa.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  submit-recipe.yml
.github/workflows/: build-cli.yml  build-notify.yml  canary.yml  cargo-deny.yml  cargo-machete.yml  ci.yml  code-review.yml  deploy-docs-and-extensions.yml  docs-update-cli-ref.yml  minor-release.yaml  pr-comment-build-cli.yml  pr-website-preview.yml  publish-ask-ai-bot.yml  publish-docker.yml  publish-npm.yml  rebuild-skills-marketplace.yml  rebuild-skills-registry.yml  release.yml  rook-issue-solver.yml  rook-release-notes.yml  rook-ui-ci.yml  scorecard.yml  stale.yml  test-finder.yml  update-hacktoberfest-leaderboard.yml  update-health-dashboard.yml
crates/rook/: Cargo.toml
crates/rook-acp/: Cargo.toml  acp-meta.json  acp-schema.json
crates/rook-acp-macros/: Cargo.toml
crates/rook-acp/src/: fs.rs  lib.rs  server.rs  server_factory.rs  tools.rs
crates/rook-acp/src/transport/: http.rs  websocket.rs
crates/rook-acp/tests/: custom_requests_test.rs  provider_test.rs
crates/rook-acp/tests/common_tests/: mod.rs
crates/rook-acp/tests/fixtures/: mod.rs  provider.rs  server.rs
crates/rook-cli/: .gitignore  Cargo.toml
crates/rook-cli/src/: cli.rs  error.rs  lib.rs  logging.rs  main.rs  project_tracker.rs
crates/rook-cli/src/commands/: configure.rs  doctor.rs  gateway.rs  info.rs  mod.rs  policy.rs  project.rs  recipe.rs  schedule.rs  session.rs  term.rs  update.rs
crates/rook-cli/src/console/: mod.rs  progress.rs  stream.rs  style.rs  summary.rs  table.rs  tool.rs
crates/rook-cli/src/recipes/: extract_from_cli.rs  github_recipe.rs  print_recipe.rs  recipe.rs  search_recipe.rs  secret_discovery.rs
crates/rook-cli/src/scenario_tests/: message_generator.rs  mock_client.rs  provider_configs.rs  scenario_runner.rs  scenarios.rs
crates/rook-cli/src/session/: builder.rs  completion.rs  editor.rs  export.rs  input.rs  mod.rs  output.rs  streaming_buffer.rs  thinking.rs
crates/rook-cli/src/session/task_execution_display/: mod.rs  tests.rs
crates/rook-cli/src/tui/: app.rs  bottom_pane.rs  chat.rs  commands.rs  events.rs  mod.rs  projection.rs  state.rs  widgets.rs
crates/rook-mcp/: Cargo.toml  README.md
crates/rook-sdk/: Cargo.toml
crates/rook-test/: Cargo.toml
crates/rook-test-support/: Cargo.toml
docs/: SWARM.md  SWARM_RECIPES.md  branch-handoff-2026-05-01.md  cli.md  configuration.md  desktop.md  development.md  mcp.md  origin.md  providers.md  quickstart.md
docs/archive/: ink-tui-removal.md
docs/integrations/: COLONY_ADOPTION_BRIDGE_PLAN.md  COLONY_V0_5_SCOPE_LOCK.md  COLONY_V0_6_SCOPE_LOCK.md  COLONY_V0_7_SCOPE_LOCK.md  COLONY_V0_8_SCOPE_LOCK.md  COLONY_V1.md  COLONY_V1_TEST_REPORT.md  HARDENING_V0_1_1.md  OPERATING_MODEL_V0_1.md  OUTCOMES_BASELINE_DISPLAY_V0_1.md  PERSONAS_SOURCE_MAP.md  ROOK_COLONY_SDLC_MILESTONE_NOTE.md  SDLC_SOW_MODULE_V0_1_RELEASE_PLAN.md  SDLC_SOW_MODULE_V0_1_SCOPE_LOCK.md  SDLC_VERIFICATION_V0_1_SCOPE_LOCK.md  SDLC_VERIFICATION_V0_2_SCOPE_LOCK.md  SDLC_VERIFICATION_V0_3_SCOPE_LOCK.md  SKILLS_REGISTRY.md  STATE_GUARD_HARDENING_V0_1.md  WORKFLOW_OUTCOMES_IMPLEMENTATION_CONTEXT.md  WORKFLOW_OUTCOMES_V0_1.md  WORKFLOW_OUTCOMES_V0_1_CLOSEOUT.md  WORKFLOW_PREFLIGHT_V0_1.md  WORKFLOW_STATE_MODEL_V0_1.md  dax-agent-and-sentinel.md  dax-seat.md  rook-colony-mode.md  rook-dax-project-manifesto.md
docs/product/: ROOK_POSITIONING_V0_1.md  ROOK_USER_JOURNEYS_V0_1.md
documentation/: AGENTS.md  docusaurus.config.ts  package.json
documentation/automation/: README.md
documentation/blog/: README.md
documentation/docs/: rook-quickstart.md
documentation/scripts/: community_stars.py
documentation/static/: llms.txt  servers.json
evals/: README.md  package.json  pnpm-lock.yaml  report.json  types.ts
evals/open-model-gym/: README.md
evals/scenarios/: audit_review_needed.json  core_proof_pass.json  gym_code_generation.json  gym_error_handling.json  gym_reasoning.json  policy_ask_git_commit.json  policy_deny_destructive.json  policy_destructive_action.json  policy_git_commit_review.json  policy_outside_system_file_deny.json  policy_safe_command.json  (+3 more)
examples/: frontend_tools.py
oidc-proxy/: README.md  wrangler.toml
scripts/: README.md  build-windows.ps1  diagnostics-viewer.py  goose-db-helper.sh  parse-benchmark-results.sh  pre-release.sh  rook-db-helper.sh  run-benchmarks.sh  test_compaction.sh  test_mcp.sh  test_providers.sh  test_providers_code_exec.sh  test_providers_lib.sh  test_subrecipes.sh
ui/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
ui/rook/: .gitignore  (+8 more)
(+875 files in other folders)
