[package]
name = "rook-acp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "generate-acp-schema"
path = "src/bin/generate_acp_schema.rs"

[features]
default = ["code-mode", "rustls-tls"]
code-mode = ["rook/code-mode"]
rustls-tls = ["rook/rustls-tls", "rook-mcp/rustls-tls"]
native-tls = ["rook/native-tls", "rook-mcp/native-tls"]

[lints]
workspace = true

[dependencies]
rook = { path = "../rook", default-features = false }
rook-mcp = { path = "../rook-mcp", default-features = false }
rmcp = { workspace = true }
sacp = { workspace = true, features = ["unstable"] }
agent-client-protocol-schema = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["compat", "rt"] }
tracing = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
fs-err = "3"
strum = { workspace = true }
url = { workspace = true }

# HTTP server dependencies
axum = { workspace = true, features = ["ws"] }
serde = { workspace = true, features = ["derive"] }
tower-http = { workspace = true, features = ["cors"] }
async-stream = { workspace = true }
http-body-util = "0.1.3"
uuid = { workspace = true, features = ["v7"] }
schemars = { workspace = true, features = ["derive"] }
rook-acp-macros = { path = "../rook-acp-macros" }
rook-sdk = { path = "../rook-sdk" }

[dev-dependencies]
async-trait = { workspace = true }
rook-test-support = { path = "../rook-test-support" }
wiremock = { workspace = true }
tempfile = { workspace = true }
test-case = { workspace = true }
axum = { workspace = true }
rmcp = { workspace = true, features = ["transport-streamable-http-server"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }

[package.metadata.cargo-machete]
# Used to provide extras imports for sacp
ignored = ["agent-client-protocol-schema"]
